2005-11-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.56

2005-11-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/hildon-app.c: Removed copy&pasting code. It's in
	HildonIMContext now.

2005-10-19  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.55

2005-10-12  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/gtk-infoprint.c (queue_new_cbanner)
	(gtk_msg_window_init): If the new infoprint is identical to the
	existing infoprint and therefore the timeout of the existing
	infoprint is reset instead of creating a new infoprint, the widget
	that was supposed be displayed in the new infoprint is now
	freed. N#20011

2005-10-05  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.9.54

2005-10-04  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/hildon-caption.c (hildon_caption_expose):
	caption_area is now exposed twice only if the widget is focused
	and we also need to draw the focus background. N#16647 (Text looks
	wrong in captioned labels)

2005-10-04  Luc Pionchon  <luc.pionchon@nokia.com>

	N#19554 Application menu does not emit "deactivate" signal when
	closed with the menu HW key,
	
	* hildon-lgpl/hildon-appview.c (_hildon_appview_toggle_menu): Make
	sure gtk_menu_shell_deactivate() is always called when app menu is
	closed.
	
	* hildon-lgpl/hildon-app.c (hildon_app_event_filter): Removed
	gtk_menu_shell_deactivate() call since it's now done in
	_hildon_appview_toggle_menu().

2005-10-04  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/gtk-infoprint.c (gtk_msg_window_real_destroy)
	(gtk_msg_window_init): Added check for reference decrementing when
	window is destroyed with its parent. N#19047

2005-09-14  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: Release 0.9.53

2005-09-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-lgpl/hildon-app.c (hildon_app_event_filter): when
	receiving "Open app menu" event from WM, don't open the menu if
	mouse is in grabbed state. N#18991
